Delete Case Study and Value Propostion Api
